syntax = "proto3";

package socialgraph;

option go_package = "post-service/pkg/generated/socialgraph";

service SocialGraphService {
    rpc GetFollowers(GetFollowersRequest) returns (GetFollowersResponse);
}

message GetFollowersRequest {
    int64 user_id = 1;
    int32 limit = 2;
    int32 offset = 3;
}

message GetFollowersResponse {
    repeated int64 user_ids = 1;
    int32 total_count = 2;
    bool has_more = 3;
    string error_message = 4;
}